coupon btn are done

--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
                             <p>Total Price</p>
                             <p>BDT <span id="total-bill">0</span></p>
                         </div>
-                        <div id="parent">
-                            <label class="input input-bordered flex items-center mb-4 hidden relative" id="coupon-input">
+                        <div id="parent" class="">
+                            <label class="input input-bordered flex items-center mb-4 relative hidden" id="coupon-input">
                                 <input id="coupon" type="text" class="grow pt-3" placeholder="Have any coupon?" />
                                 <span id="coupon-btn" onclick="grandTotal();"
                                     class="bg-[#1dd100] text-white px-5 py-2 rounded-xl absolute right-[1%] top-[6%]">Apply</span>
@@ -320,7 +320,7 @@
 
                         
                         <div id="my-modal" class="hidden">
-                            <div class="modal p-20" role="dialog" id="my_modal_8">
+                            <div class="modal px-40 py-60" role="dialog" id="my_modal_8">
                                 <div class="modal-box flex flex-col justify-center">
                                     <div class="mx-auto mb-10"><img src="/images/success.png"
                                             alt=""></div>
